changed to work with helper

--- a/css/main.css
+++ b/css/main.css
@@ -1,56 +1,3 @@
-.flex {
-  display: -webkit-box; 
-  display: -ms-flexbox; 
-  display: -webkit-flex; 
-  display: flex;
-}
-
-
-.center {
-	-webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-
-#main {
-  background-color: black;
-  height: 100%;
-}
-
-#this-is-not-container {
-  position: relative;
-  height: 100%;
-}
-
-#logo-container {
-  padding-top: 40px;
-  padding-left: 60px;
-  height: 95px;
-}
-
-.this-is-not {
-  width: 100%;
-  height: 100%;
-}
-
-.image-container {
-  width: 55%;
-  flex-direction: row ;
-}
-
-.text-container {
-  width: 45%;
-}
-
-h2 {
-  color: #fff;
-  font-size: 72pt;
-}
-
-
-
-
 /* 
  _____   _           _         _                        _                  
 |_   _| | |         | |       | |                      | |                 
@@ -93,40 +40,81 @@ Enjoy responsibly!
   left: 60px;
 }
 
-#static-slide {
+.slide {
   position: fixed;
   left: 0;
   width: 100%;
   height: 100%;
 }
 
-#static-slide .slidetext {
+/*#slides .static-text {
   position: fixed;
   left: 59%;
   top: 40%;
   color: #fff;
   font-size: 3em;
+}*/
+
+
+.slide-image-ct {
+  width: 55%;
 }
 
-.slide-image {
-  position: fixed;
-  left: 5%;
-  top: 20%;
+.slide-text-ct {
+  width: 45%;
+  color: #fff;
+  font-size: 3em;
 }
 
-#slides {
-  height: 200%;
+#location-helper {
+    position:absolute;
+    left:0;
+    top: 0;
+    height:300%;
+    width: 20px;
 }
 
-.slide {
-  height: 50%;
+.marker {
+    height: 33.3333%;
+    width: 100%;
+}
+.red {
+    background-color: red;
+}
+.green {
+    background-color: green;
+}
+.blue {
+    background-color: blue;
 }
 
 
 /* ==========================================================================
    Helper classes
    ========================================================================== */
+.flex {
+  display: -webkit-box; 
+  display: -ms-flexbox; 
+  display: -webkit-flex; 
+  display: flex;
+}
 
+.center {
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+
+.vertical-center {
+  -webkit-align-items: center;
+  align-items: center;
+}
+
+.horizontal-center {
+  -webkit-justify-content: center;
+  justify-content: center;
+}
 /*
  * Image replacement
  */
